# Emce

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  compile_commands.json  make_cmake.bat  make_debug.bat  make_release.bat
data/: atlas.xcf  water.xcf
source/: blocks.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_gen.cpp  chunk_gen.h  chunk_mesh_gen.cpp  chunk_mesh_gen.h  common.h  console.cpp  console.h  debug_ui.cpp  debug_ui.h  draw.cpp  draw.h  game.cpp  game.h  game_renderer.cpp  game_renderer.h  input.cpp  input.h  main.cpp  math_types.cpp  math_types.h  player.cpp  player.h  temp  text_batcher.cpp  text_batcher.h  utils.cpp  utils.h  window.cpp  window.h  world.cpp  world.h  world_utils.cpp  world_utils.h
source/graphics/: cubemap.cpp  cubemap.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  opengl_abs.cpp  opengl_abs.h  shader.cpp  shader.h  simple_draw.cpp  simple_draw.h  text_batcher.cpp  text_batcher.h  texture.cpp  texture.h  texture_array.cpp  texture_array.h  vertex_array.cpp  vertex_array.h
source/shaders/: block.glsl  chunk.glsl  crosshair.glsl  cube_line_outline.glsl  cube_outline.glsl  flat_image.glsl  line.glsl  line_outline_cube.glsl  post_process.glsl  sd_line.glsl  sd_outline_cube.glsl  simple_quad.glsl  simple_text.glsl  skybox.glsl  test.glsl  textured_quad.glsl  triangle.glsl  water.glsl
